深度重构文档：架构师级技术指南
- 重构核心Java文档(01-04)：JVM深度、Java并发编程、Java集合与数据结构、Spring生态系统
  - 添加架构师级面试题，每题500-800字深度回答
  - 包含核心原理、应用场景、实战经验、权衡取舍、常见追问、踩坑经验

- 重构中间件文档(09-12)：MySQL深度优化、Redis实战、消息队列、其他中间件
  - 深度重构面试题部分，包含实战经验和架构师视角
  - 添加生产案例和性能数据

- 新增6篇架构师必备文档(23-28)：
  - 微服务治理、可观测性体系、技术选型与架构决策
  - 容量规划与成本优化、安全架构设计、架构师面试指南

- 更新README和导航文档：
  - 更新文档结构、学习路径、技术栈覆盖
  - 突出架构师级技术深度和面试题标准
  - 添加文档特色说明和目标读者分析

- 完善代码示例项目：
  - 新增微服务完整项目、秒杀系统、IM系统、支付系统
  - 完善大数据和AI模块，新增数据仓库、实时计算平台、特征平台、MLOps流程

总计：28篇技术文档，20道架构师级深度面试题，约15,000字深度技术内容